# WallpaperApp-Qt

./: .gitignore  .gitmodules  CMakeLists.txt  CategoryGridList.qml  CategoryImageList.qml  CategoryList.qml  HomePage.qml  ImageGridList.qml  ImageList.qml  ImageListView.qml  ImageViewer.qml  ImagesTypes.qml  NetworkInstance.js  QWall.desktop  QWall.pro  README.md  SideBar.qml  WallpaperApp.pro  WallpaperDesktop.pro  WallpaperList.qml  WallpaperType.qml  imagedownloader.cpp  imagedownloader.h  main.cpp  main.qml  qml.qrc
src/: main.cpp  settings.cpp  settings.h
src/js/: NetworkInstance.js
src/qml/: AboutDialog.qml  CategoryImageList.qml  CategoryList.qml  DownloadDialog.qml  HomePage.qml  ImageGridList.qml  ImageList.qml  ImageViewer.qml  SearchPage.qml  SubCategoryImageList.qml  main.qml
